Learning goals for chapter 3 in English

--- a/docs/03-elements/01-duration-terms.adoc
+++ b/docs/03-elements/01-duration-terms.adoc
@@ -16,6 +16,7 @@ Sichten, Entscheidungen, übergreifende Konzepte und Themen, Schnittstellen, Str
 |===
 
 === Terms and concepts
+Views, decisions, cross-cutting concepts and topics, interfaces, structures, constraints, risks, quality goals.
 
 // end::EN[]
 
