align chapter titles in English

--- a/docs/03-elements/00-structure.adoc
+++ b/docs/03-elements/00-structure.adoc
@@ -4,7 +4,7 @@
 // end::DE[]
 
 // tag::EN[]
-== Elements of Architecture Documentation
+== Elements of architecture documentation
 // end::EN[]
 
 include::01-duration-terms.adoc[{include_configuration}]
