--- a/docs/01-fundamentals/00-structure.adoc
+++ b/docs/01-fundamentals/00-structure.adoc
@@ -6,7 +6,7 @@
 // end::DE[]
 
 // tag::EN[]
-== Fundamental Terms of Architecture Documentation
+== Fundamental terms of architecture documentation
 // end::EN[]
 
 include::01-duration-terms.adoc[{include_configuration}]
