--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -7,10 +7,9 @@ The goal of this module is to equip architects and developers with solid methodi
 
 The terminology used in the iSAQB curricula can be found as a (freely available) ebook, published on https://leanpub.com/isaqbglossary/read[Leanpub].
 
-== Development versions
+== Available versions
 
-The ADOC Curriculum is currently maintained and published in German (DE) only,
-an EN translation is under way.
+The ADOC Curriculum is currently maintained and published in German (DE) and English (EN).
 
 Maintainers and volunteer reviewers collaborate on GitHub to improve this curriculum.
 
