--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= image:docs/isaqb-logo.jpg[iSAQB,150] Advanced-Curriculum "Architecture Documentation"
+= image:docs/isaqb-logo.jpg[iSAQB,150] CPSA-Advanced Curriculum "Architecture Documentation"
 
 The Advanced Level Curriculum ADOC:
 The goal of this module is to equip architects with the knowledge and capabilities to create and maintain effective architecture documentation of software systems.
@@ -25,7 +25,7 @@ image:https://img.shields.io/github/issues-closed/isaqb-org/curriculum-adoc.svg[
 
 This is <<copyrighted,copyrighted work>>.
 
-=== Version history
+=== Version history before GitHub releases
 
 [cols="1,1,5"]
 |===
@@ -34,7 +34,6 @@ This is <<copyrighted,copyrighted work>>.
 | 1.5-DE  | 2018 | latest German version
 | 1.5-EN  | 2018 | Preliminary translation
 | 1.6-DE  | 2018 | minor fixes, have not been taken over to EN version
-| 1.7-DRAFT | Nov-2019 | migration to numberized learning goals and new curriculum structure, aligned with other CPSA-Advanced modules.
 
 |===
 
@@ -60,21 +59,10 @@ git clone https://github.com/isaqb-org/curriculum-adoc.git --recursive
 --
 
 == How to Build the Documents
-Prerequisite: You need a Java Runtime(tm) installed.
+Prerequisite: You need a Java Runtime(tm) 17 or higher installed.
 
 You build the output documents with gradle.
 That will produce both pdf and html output in German (DE) _and_ English (EN), unless you modify the configuration.
-
-In case you want to change that, adjust the following part of `build.gradle`:
-
-[source,groovy]
-----
-task buildDocs {
-  group 'Documentation'
-  description 'Grouping task for generating all languages in several formats'
-  dependsOn "includeLearningObjectives", """renderDE", "renderEN"
-}
-----
 
 
 == Additional translations/languages
@@ -82,7 +70,7 @@ include::docs-ext/EXTERNAL_DOCUMENTS_README.adoc[]
 
 == Maintainers
 
-This repository is currently maintained by Gernot Starke.
+This repository is currently maintained by Gernot Starke and Stefan Zörner.
 
 It was forked from https://github.com/isaqb-org/advanced-template,
 so the contributors of that project basically contributed to this one, too.
