--- a/docs/99-references/00-references.adoc
+++ b/docs/99-references/00-references.adoc
@@ -18,6 +18,10 @@ This section contains references that are cited in the curriculum.
 - [[[bachmann,Bachmann 2000]]] Bachmann, F., L. Bass, et al.: Software Architecture Documentation in Practice. Software Engineering Institute, CMU/SEI-2000-SR-004.
 - [[[bass,Bass 2021]]] Bass, L., Clements, P. und Kazman, R.: Software Architecture in Practice. 4. Edition, Addison-Wesley 2021.
 
+- [[[brown-c4,Brown (C4)]]] Brown, S.:, R.: The C4 model for visualising software architecture. Leanpub <https://leanpub.com/visualising-software-architecture>
+
+- [[[brown-sg,Brown (Guidebook)]]] Brown, S.:, R.: The software guidebook. A guide to documenting your software architecture. Leanpub <https://leanpub.com/documenting-software-architecture>
+
 
 - [[[clements,Clements+2010]]] Clements, P., F. Bachmann, L. Bass, D. Garlan, J. Ivers et al: Documenting Software Architectures – Views and Beyond. 2. Edition, Addison Wesley 2010.
 
