--- a/docs/02-approaches/02-learning-goals.adoc
+++ b/docs/02-approaches/02-learning-goals.adoc
@@ -108,8 +108,8 @@ They know that agile development and architecture documentation are not in confl
 
 Software architects know examples of architecture templates, such as:
 
-* arc42
-* C4 (Simon Brown)
+* arc42 (<<arc42>>,<<starkehruschkaarc42>>,<<starkehruschka>>)
+* C4 (<<brown-c4>>, <<brown-sg>>)
 * IEEE 1471 („Recommended Practice for Architecture Description of Software-Intensive Systems“)
 
 // end::EN[]
