#36 add docs-as-code as LG 4-3

--- a/docs/99-references/00-references.adoc
+++ b/docs/99-references/00-references.adoc
@@ -47,6 +47,10 @@ This section contains references that are cited in the curriculum.
 
 - [[[nygard,Nygard 2011]]] M. Nygard: Documenting Architecture Decisions. Blog Post 2011 https://cognitect.com/blog/2011/11/15/documenting-architecture-decisions. See also https://adr.github.io/
 
+**P**
+
+- [[[plantuml,PlantUML]]] PlantUML: Open-Source toolset and language definition to create diagrams from textual descriptions. Online: https://plantuml.com/
+
 **S**
 
 - [[[starke,Starke 2024]]] G. Starke: Effektive Softwarearchitekturen - Ein praktischer Leitfaden. 10. Auflage 2024, Carl Hanser Verlag, München.
