--- a/README.adoc
+++ b/README.adoc
@@ -34,7 +34,7 @@ This is <<copyrighted,copyrighted work>>.
 | 1.5-DE  | 2018 | latest German version
 | 1.5-EN  | 2018 | Preliminary translation
 | 1.6-DE  | 2018 | minor fixes, have not been taken over to EN version
-
+| 2025.1  | 2025 | updated references, included docs-as-code, included LLMs/AI |
 |===
 
 
