--- a/docs/curriculum-adoc.adoc
+++ b/docs/curriculum-adoc.adoc
@@ -35,7 +35,7 @@ include::00a-preamble/00-introduction.adoc[{include_configuration}]
 
 <<<
 :sectnums!:
-include::00b-basics/00-basics.adoc[{include_configuration}]
+include::00b-basics/00-basics.adoc[]
 
 <<<
 :sectnums:
