add reference to ISO-42010:2022.

--- a/docs/99-references/00-references.adoc
+++ b/docs/99-references/00-references.adoc
@@ -39,6 +39,10 @@ This section contains references that are cited in the curriculum.
 
 - [[[hargis,Hargis+2004]]] G. Hargis et al.: Quality Technical Information: A Handbook for Writers and Editors. Prentice Hall, IBM Press, 2004.
 
+**I**
+
+- [[[iso42010,ISO/IEC 42010:2022]]] ISO/IEC: 42010:2022: Software, systems and enterprise — Architecture description. Available on https://www.iso.org/standard/74393.html.
+
 **K**
 
 - [[[kruchten,Kruchten 1995]]] P. Kruchten: Architectural Blueprints – The 4-1 View Model of Architecture. IEEE Software November 1995; 12(6), p. 42-50.
