--- a/docs/01-fundamentals/02-learning-goals.adoc
+++ b/docs/01-fundamentals/02-learning-goals.adoc
@@ -62,6 +62,7 @@ Softwarearchitekt:innen wissen, dass
 // tag::EN[]
 [[LG-1-1]]
 ==== LG 1-1: Understand the benefits and goals of architecture documentation
+// LG-title-proposal: Explain the benefits and goals of architecture documentation
 
 Software architects understand that architecture documentation is not an end in itself.
 
@@ -76,6 +77,8 @@ They can advocate these goals and the benefits of documentation to stakeholders 
 
 [[LG-1-2]]
 ==== LG 1-2: Understand the importance of architecture documentation for different stakeholders
+// LG-title-proposal: Adapt architecture documentation for different stakeholders
+// LG-title-proposal: Tailor architecture documentation to stakeholder needs
 
 Software architects understand that different stakeholders usually have different requirements for architecture documentation, for example with regard to..:
 
@@ -87,6 +90,7 @@ Software architects understand that different stakeholders usually have differen
 
 [[LG-1-3]]
 ==== LG 1-3: Differentiate architectural documentation from other types of documentation
+// existing title meets standards - checked 2025.10.13 and Gemini-2.5-Pro
 
 Software architects understand that architecture documentation has points of contact and partial overlap with other types of documentation, for example:
 
@@ -98,6 +102,8 @@ Software architects understand that architecture documentation has points of con
 
 [[LG-1-4]]
 ==== LG 1-4: Know typical notation and representation methods for architectural documentation
+// LG-title-proposal: Select appropriate notations for architecture documentation
+// LG-title-proposal: Choose suitable representation methods for architecture documentation
 
 Software architects are familiar with various methods of notation and representation of architectural information, for example:
 
@@ -109,6 +115,7 @@ They know that more formal notations such as UML can be helpful for architecture
 
 [[LG-1-5]]
 ==== LG 1-5: Know variants of development processes and their influence on architecture documentation
+// LG-title-proposal: Adapt documentation efforts to different development processes
 
 Software architects know that
 
